--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="facebook_app_id">901634563266189</string>
+
 </resources>
