--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_fragment_container">ActivityFragmentContainer</string>
     <string name="title_activity_user_profile">User Profile</string>
+    <string name="title_activity_create_new_event">Create New Event</string>
+    <string name="title_activity_event_detail">Event Detail</string>
+    <string name="title_activity_show_event_users_map">Show Event Users</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="facebook_app_id">901634563266189</string>
+
+
 
 </resources>
