--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,11 @@
     <string name="title_activity_create_new_event">Create New Event</string>
     <string name="title_activity_event_detail">Event Detail</string>
     <string name="title_activity_show_event_users_map">Show Event Users</string>
-
+    <string name="title_activity_track">Event Track</string>
 
     <string name="facebook_app_id">901634563266189</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
